# MembershipSystem

./: LICENSE  README.md  usecaseDiagram.drawio
build-client-Desktop-Debug/: Makefile  client  moc_mainwindow.cpp  ui_mainwindow.h
client/: client.pro  client.pro.user.821974a  client.pro.user.da1f42b  main.cpp  usbwizard.cpp  usbwizard.h
client/backend/: CMakeLists.txt
client/backend/inc/: servercom.h
client/backend/lib/json/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_jsonTargets.cmake
client/backend/lib/json/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
client/backend/lib/json/test/cmake_add_subdirectory/: CTestTestfile.cmake  Makefile  cmake_install.cmake
client/backend/lib/json/test/cmake_import/: CTestTestfile.cmake  Makefile  cmake_install.cmake
client/backend/lib/json/test/cmake_import_minver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
client/backend/src/: main.cpp  servercom.cpp
database/: JydenDB.sql  README.md
server/server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  server_da_DK.ts  usbwizard.cpp  usbwizard.h
